# PR-Root

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  more.md  pyproject.toml
.github/workflows/: ci.yml
docs/: math.md
src/pr_root/: __init__.py  core.py
tests/: test_pr_root.py
